# kabomu-python

./: .gitignore  README.md  pyproject.toml
examples/: FileReceiver.py  FileSender.py  LocalhostTcpClientTransport.py  LocalhostTcpServerTransport.py  SocketConnection.py  pyproject.toml  settings.ini-example  tcp-client.py  tcp-server.py
examples/shared/: AppLogger.py  FileReceiver.py  FileSender.py  LocalhostTcpClientTransport.py  LocalhostTcpServerTransport.py  SocketConnection.py  io_utils_extra.py
kabomu/: StandardQuasiHttpClient.py  StandardQuasiHttpServer.py  abstractions.py  errors.py  io_utils_internal.py  misc_utils_internal.py  protocol_utils_internal.py  quasi_http_utils.py
kabomu/tlv/: tlv_utils.py
tests/: test_StandardQuasiHttpClientServer.py  test_io_utils_internal.py  test_misc_utils_internal.py  test_protocol_utils_internal.py
tests/shared/: comparison_utils.py
tests/tlv/: test_BodyChunkDecodingStreamInternal.py  test_ContentLengthEnforcingStreamInternal.py  test_MaxLengthEnforcingStreamInternal.py  test_quasi_http_utils.py  test_tlv_utils.py
