[tool.poetry]
name = "shared"
version = "0.1.0"
description = ""
authors = ["Aaron Baffour-Awuah <aaronbaffourawuah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kabomu = "^0.9.0"
trio = "^0.22.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
